# tinto

./: Cargo.toml  demo.tape
src/: app.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs
src/ui/: layout.rs  lights.rs  mod.rs  rooms.rs  utils.rs
