[package]
name = "tinto"
version = "0.1.0"
authors = ["rektdeckard <friedtm@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
dotenv = "0.15.0"
futures = "0.3.30"
hues = { path = "../hues", features = ["mdns", "sse"] }
ratatui = "0.26.2"
tokio = { version = "1.35.1", features = ["full"] }

